compiler/tests/fail/non_exhaustive_match.afns
enum Color {
    Red;
    Green;
    Blue;
}

fn code(c: Color) -> i32 {
    return match c {
        Color.Red => 1,
        Color.Green => 2,
    };
}
